tests/files/flow_controller_tests/should_run/096.cmdr
x = 0.5;
print arctan(x);