tests/files/flow_controller_tests/should_fail/084.cmdr
x = false;
print arctan(x);